2011-12-12  Andrew Haley  <aph@redhat.com>

	* arm_port/hotspot/src/cpu/zero/vm/thumb2.cpp (DisableCompiler): Delete.
	(Thumb2_Compile): Use !UseCompiler instead of DisableCompiler.
	(Thumb2_Initialize): Likewise.

2011-12-12  Xerxes Rånby  <xerxes@zafena.se>

	* arm_port/hotspot/src/cpu/zero/vm/cppInterpreter_arm.S
	(DISPATCH_FINISH): Add .ltorg at end of the macro to unbreak
	armv5 build-bots.
	(.eabi_attribute Tag_ABI_*): Replaced by numerical values
	to stay compatible with GCC 4.3.3.

2011-12-08  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (JTREG_SRCS): Use abs_top_srcdir.

2011-12-08  Andrew Haley  <aph@redhat.com>

	* arm_port/hotspot/src/cpu/zero/vm/bytecodes_arm.def
	(aload_N_getfield, [iaf]load_igetfield): Add a couple of missing
	barriers.

2011-12-08  Xerxes Rånby  <xerxes@zafena.se>

	CACAO:
	- CA164: Get rid of mysterious 10 trailing bytes in literal strings.
	* NEWS:
	Updated.
	* Makefile.am:
	(CACAO_VERSION): Updated CACAO to 2011-12-08 revision.
	(CACAO_SHA256SUM): Updated.

2011-12-07  Andrew Haley  <aph@redhat.com>

	* arm_port/hotspot/src/cpu/zero/vm/thumb2.cpp
	(Thumb2_disass): Use class Opcodes to do the disassembly.
	(Thumb2_Enter): Update ISTATE_SELF_LINK.
	(T_DMB): New.
	(fullBarrier): New.
	(storeBarrier): New.
	(Thumb2_Accessor): Add volatile barriers.
	(Thumb2_codegen): Likewise.
	(Thumb2_Initialize): Check UseCompiler.
	(class Opcodes): New.  Load libopcodes.so lazily.
	* arm_port/hotspot/src/cpu/zero/vm/bytecodes_arm.def: For every
	{get,put}field handler, add a test for volatility and duplicate
	the code path into two parts, volatile and non-volatile.  Add
	barriers to the volatile path.
	* arm_port/hotspot/src/cpu/zero/vm/cppInterpreter_arm.S (dmb)
	(dmb_st, FullBarrier, StoreLoadBarrier, StoreStoreBarrier): New
	macros.
	(abort_table): Add entries for volatile versions of all the field
	handlers.
	({put,get}field_volatile_*): Add volatile versions of all handlers.
	(Thumb2_{put,get}field_*_stub): Likewise.