@@ -1,3 +1,12 @@
+2011-12-16  Andrew Haley  <aph@redhat.com>
+
+	* arm_port/hotspot/src/cpu/zero/vm/thumb2.cpp (H_SAFEPOINT): New.
+	(Thumb2_Safepoint): New.
+	(Thumb2_Branch): Call Thumb2_Safepoint.
+	(Thumb2_Goto): Likewise.
+	(Thumb2_Return): Likewise.
+	(Thumb2_Initialize): Add handler for H_SAFEPOINT.
+
 2011-12-12  Andrew Haley  <aph@redhat.com>
 
 	* arm_port/hotspot/src/cpu/zero/vm/thumb2.cpp (DisableCompiler): Delete.
